<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/subjectLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/subject_label_content_description"
        android:text="@string/subject_label"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/gradeRadio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grade_2" />

        <RadioButton
            android:id="@+id/gradeRadio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grade_3" />

        <RadioButton
            android:id="@+id/gradeRadio4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grade_4" />

        <RadioButton
            android:id="@+id/gradeRadio5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grade_5" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>